[package]
name = "bench_block_execution"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoldot = { git = "https://github.com/paritytech/smoldot", branch = "master" }

